# pokemon_generation

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  OLD_requirements.txt  README.md  app.py  cloudbuild.yaml  config.properties  cpu_app.py  data.dvc  data_drifting.py  datatest.dockerfile  dvcdata.dockerfile  environment.yml  environment_ddpm.yml  file_pre.py  finetune_app.py  gcloudrun.dockerfile  get_images.sh  job_config.yaml  latent_diffusion_handler.py  metadata.jsonl  profiler.py  pruning.py  pyproject.toml  quant_pruning.py  real_requirements.txt  requirements.txt  results.md  sd-v1-4-full-ema.ckpt.dvc  sd_finetune.dockerfile  test_trainer.dockerfile  torchserverun.py  train.py  week9_exercise.ipynb
.dvc/: config
assets/: pokemon.png:Zone.Identifier
conf/: config.yaml  ddpm_config.yaml  ddpm_config1.yaml  training_config.yaml
data/: raw.dvc
dockerfiles/: OLD_training.dockerfile  gcloudrun.dockerfile  sd_finetune.dockerfile  test_trainer.dockerfile  training.dockerfile
ldm/: utils.py
models/: simple_ddpm.py  simple_unet.py
notebooks/: look_at_data.ipynb  train_text_to_image_lora.py
pokemon_stable_diffusion/: ddpm_model.py  generate.py  latent_diffusion.py  latent_diffusion_lightning.py  sd_finetune.py  sd_finetune_pl.py  sd_fintune.py  sd_lightning_finetune.py
reports/: README.md
src/: __init__.py  app.py  dataset.py  features.py  plots.py  train.py
tests/: __init__.py  test_data.py  test_ddpm_checkpoint.py  test_ddpm_conditioning.py  test_ddpm_initialization.py  test_ddpm_model.py  test_ddpm_saving_loading.py  (+3 more)
(+52 files in other folders)
