[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon_generation"
version = "0.0.1"
description = "In this project we fine-tune a diffusion model on images of Pokémon. The images are annotated by labels. The goal is to have a deployable model that generates Pokémon given a text prompt."
authors = [
  {name = "Meimingwei Li", email = "yecanlee@yahoo.com"},
  {name = "Gamze G. Kasman", email = "g.kasman@campus.lmu.de"},
  {name = "Michael Sawitzki", email = "M.Sawitzki99@gmail.com"},
  {name = "Luis Karrlein", email = "Luis.Karrlein@campus.lmu.de"},
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["src", "ldm", "pokemon_stable_diffusion"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
exclude = ["ldm", "pokemon_stable_diffusion", "reports"]

[tool.ruff.lint]
extend-select = ["I"]
extend-ignore = ["I001", "E402", "F401"]
extend-unfixable = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
